Adding action move with data button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidPemula">
         <activity
+            android:name=".MoveWithDataActivity"
+            android:exported="false" />
+        <activity
             android:name=".MoveActivity"
             android:exported="false" />
         <activity
